Removed duplicated folder/files

--- a/hangman.html
+++ b/hangman.html
@@ -58,9 +58,9 @@
     <p id="player-chances"></p>
     <div id="player-options">
         <button class="hvr-bob hvr-fade" id="restart">PLAY AGAIN</button>
-        <a class="hvr-underline-from-left" id="atag" href="./scramblegame.html">Play ScrambledWord!</a>
+        <a class="hvr-underline-from-left" id="atag" href="./index.html">Play ScrambledWord!</a>
     </div>
-        <a class="hvr-underline-from-left" id="home-atag" href="./scramblegame.html">Play ScrambledWord!</a>
+        <a class="hvr-underline-from-left" id="home-atag" href="./index.html">Play ScrambledWord!</a>
     <script type="text/javascript" src="./JS/hangman.js"></script>
 </body>
 </html>
